fixed the overlapping images in courses page

--- a/css/course.css
+++ b/css/course.css
@@ -142,7 +142,6 @@ main {
     display: flex;
     margin: 20px;
     padding: 10px 50px;
-    background-color: #d4d4d4;
 }
 
 .noMargin {
